Safari alignment and button font fix

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -530,10 +530,8 @@ nav li a {
   order: 1;
   z-index: 2;
   position: absolute;
-  right: 27px;
-  top: 46%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
+  right: 28px;
+  top: 11px;
   cursor: pointer;
 }
 
